wk5 final draft

--- a/week5/main.tex
+++ b/week5/main.tex
@@ -33,7 +33,7 @@ Let the statement: "There is at most one parallel line to a given line $l$ throu
     \includegraphics[width = 100mm]{GRAPH1.png}
 \end{figure}
 \newline
-We first prove that $A \implies B$. Let $a \parallel b$, and $c$ intersects $a$ at point $Q$. Assume that statement $B$ is false so $c$ does not intersect $b$. Since it does not intersect and $b$ and $c$ are coplanar, we have $b \parallel c$. $a \parallel b$, and $a, c$ interesect at $Q$. However by $A$ we know that there can be at most one line parallel to $b$ at point $Q$. \lightning. Our assumption is incorrect, $A \implies B$
+We first prove that $A \implies B$. Let $a \parallel b$, and $c$ intersects $a$ at point $Q$. Assume that statement $B$ is false so $c$ does not intersect $b$. Since it does not intersect and $b$ and $c$ are coplanar, we have $b \parallel c$, $a \parallel b$, and $a, c$ interesect at $Q$. However by $A$ we know that there can be at most one line parallel to $b$ at point $Q$. \lightning. Our assumption is incorrect, $A \implies B$
 \newline
 Then we show that $B \implies A$. Let $a \parallel b$, and $c$ intersects $b$ at point $P$. Assume that $A$ is incorrect, so we construct $a'$ to also be parallel to $b$. We know that $b$ must intersect $a$ by $B$. We name this point $P$. Then since we have assumed that $a \parallel a'$, our line must also intersect $a'$ at $P$. Consider $\angle SPT, \angle RQT$, and they must be equal because they $a \parallel b$, and corresponding angles are equal when the two lines are parallel. By the same logic we have $\angle SPT = \angle R'QT$.
 \newline
@@ -68,9 +68,8 @@ $$\frac{1\times 3}{2^2} \times \frac{2 \times 4}{3^2} \times ...\times \frac{(n-
 $$= \frac{1}{2} \times \frac{n+1}{n} = \frac{n+1}{2n}$$
 
 \section{Mon Dis, 1d}
-(Assuming that )
 \subsection{$4^n + 15n -1$}
-The largest common divisor for these expressions is $1$.
+The largest common divisor for these expressions is $3$.
 
 \subsection{$n^3 - n$}
 The largest common divisor for these expressions is $6$.
