--- a/week5/main.tex
+++ b/week5/main.tex
@@ -69,7 +69,7 @@ $$= \frac{1}{2} \times \frac{n+1}{n} = \frac{n+1}{2n}$$
 
 \section{Mon Dis, 1d}
 \subsection{$4^n + 15n -1$}
-The largest common divisor for these expressions is $3$.
+The largest common divisor for these expressions is $9$.
 
 \subsection{$n^3 - n$}
 The largest common divisor for these expressions is $6$.
@@ -177,21 +177,21 @@ Now we can put it all together: $(n+1)! = (n+1)n! < (n+1)n^n < (n+1)^{n+1}$. Thu
 \section{Fri Lec, 3a}
 Base case: $n = 0, n^3-n = 0, n \bmod 6 \equiv 0$ Base case holds.
 \newline
-Inductive case: Assume that $(n^3-n) \mid 6$ for some $n \geq 0$, consider $(n+1)^3-(n+1)$.
+Inductive case: Assume that $6 \mid (n^3-n)$ for some $n \geq 0$, consider $(n+1)^3-(n+1)$.
 $$= n^3 + 3n^2 + 3n + 1 - n -1 = n^3+3n^2+2n = n(n^2+3n+2) = n(n+1)(n+2)$$
-Integers that are divisible by 2 are spaced such that there is one every other, and those divisible by 3 are spaced such that there is one every third. Here we have a product of 3 consecutive integers, so there must be at least 1 integer between $n, n+1, n+2$ that is divisible by 2, and at least 1 that is divisible by 3. Since $6=2 \times 3$, we have $n(n+1)(n+2) \mid 6$.
+Integers that are divisible by 2 are spaced such that there is one every other, and those divisible by 3 are spaced such that there is one every third. Here we have a product of 3 consecutive integers, so there must be at least 1 integer between $n, n+1, n+2$ that is divisible by 2, and at least 1 that is divisible by 3. Since $6=2 \times 3$, we have $6 \mid n(n+1)(n+2)$.
 \newline
 We have proven the inductive case. Q.E.D.
 
 \section{Fri Lec, 3b}
 Base case: $n = 0, 2^2+7^0 = 5, 5 \bmod 5 \equiv 0$ Base case holds.
 \newline
-Inductive case: Assume that $2^{n+2}+7^n \mid 5$ for some $n \geq 0$, consider $2^{n+3}+7^{n+1}$.
+Inductive case: Assume that $5 \mid 2^{n+2}+7^n$ for some $n \geq 0$, consider $2^{n+3}+7^{n+1}$.
 \newline
 We add then subtract $2^{n+2}\times 7$ from the latter, this does not change the value but will alow us to manipulate the terms:
 $$7 \times 2^{n+2} - 7 \times 2^{n+2} + 2^{n+3}+7^{n+1} = 7(2^{n+2}+7^n)+2^{k+2}(2-7)$$
 $$=7(2^{n+2}+7^n) - 5 \times 2^{k+2}$$
-By the inductive hypothesis  $2^{n+2}+7^n \mid 5$, and since $-5 \mid 5$, both terms are divisible by 5, therefore the sum must also be divisible by 5.
+By the inductive hypothesis  $5 \mid 2^{n+2}+7^n$, and since $5 \mid -5$, both terms are divisible by 5, therefore the sum must also be divisible by 5.
 \newline
 We have proven the inductive case. Q.E.D.
 \end{document}
