--- a/week5/main.tex
+++ b/week5/main.tex
@@ -39,7 +39,7 @@ Then we show that $B \implies A$. Let $a \parallel b$, and $c$ intersects $b$ at
 \newline
 Using the transitive property we can get $\angle RQT = \angle R'QT$. However this cannot be true because if the two angles are equal, $a, a'$ overlap and they become the same line. \lightning
 \newline
-Our assumption is incrroect and $B \implies A$. Therefore $A \iff B$. Q.E.D.
+Our assumption is incorrect and $B \implies A$. Therefore $A \iff B$. Q.E.D.
 
 \section{Mon Lec, 3a}
 \begin{figure}[h]
