--- a/week8/main.tex
+++ b/week8/main.tex
@@ -25,6 +25,12 @@
 \begin{document}
 \title{Math 74, Week 8}
 \maketitle
+\section{Mon Lec, 5}
+
+
+\section{Mon Lec, 6}
+
+
 
 \section{Mon Dis, 2c}
 Let $a\leq b \leq c \leq d$, we can do this since $\N$ is ordered. We rearrange $a+b+c+d = abcd$ to $a+b+c = d(abc-1)$
@@ -45,8 +51,25 @@ So finally we have our solution: rearrangements of $1,1,2,4$ is the only natural
 
 \section{Mon Dis, 4g}
 $$(7,29) \to (7+1,29+1) = (8, 30) \to (4, 15)$$
-$$(7,29) \to (7+67, 29+67) = (74, 96)$$
-$$(4,15) \to (4+59, 15+59) = (63, 74)$$
-$$(7,29) \to (7+34, 29+34) = (41, 63)$$
+$$(4,15) \to (4+11, 15+11) = (15, 26)$$
+$$(7,29) \to (7+19, 29+19) = (26, 48)$$
+$$((4, 15), (15,26)) \to (4, 26)$$
+$$((4,26), (26,48)) \to (4,48)$$
+$$(4, 48) \to (2, 24) \to (1, 12)$$
+
+\section{Wed Dis, 3a}
+
+\section{Wed Dis, 3b}
+
+\section{Wed Dis, 4a}
+
+
+\section{Fri Lec, 4a}
+
+\section{Fri Lec, 4b}
+
+\section{Fri Lec, 4c}
+
+\section{Fri Lec, 4d}
 
 \end{document}
