--- a/week9/main.tex
+++ b/week9/main.tex
@@ -30,7 +30,7 @@
 \section{Mon Lec, 2}
 
 \subsection{a}
-Our monovariant is the sum of all the numbers. Consider $a = ka', b = kb', \gcd(a,b) = k, \lcm(a,b) = ka'b'$ Then $a+b = k(a'+b'), \gcd(a,b) +\lcm(a,b) = k(a'b'+1)$. $a'b' + 1$ will always be greater than or equal to $a' + b'$, so it is nondecreasing.
+Our monovariant is the sum of all the numbers. Consider $a = ka', b = kb', \gcd(a,b) = k, lcm(a,b) = ka'b'$ Then $a+b = k(a'+b'), \gcd(a,b) +lcm(a,b) = k(a'b'+1)$. $a'b' + 1$ will always be greater than or equal to $a' + b'$, so it is nondecreasing.
 
 \subsection{b}
 The upperbound is the $nL$, where $n$ is the amount of numbers, and $L$ the product of all the numbers. Since $L$ is the largest number that can appear by this process, multiplying it by the amount of numbers gives an upperbound.
@@ -39,7 +39,7 @@ The upperbound is the $nL$, where $n$ is the amount of numbers, and $L$ the prod
 Our monovariant changes discretely, and it can change by at least 1 per turn. Since it is nondecreasing, it must stabilize at a value in this process.
 
 \subsection{d}
-When the monovariant stops changing, we have $a+b = \gcd(a,b) +\lcm(a,b)$ therefore $a = \gcd(a,b), b = \lcm(a,b)$ or vice versa. Therefore the game also stops.
+When the monovariant stops changing, we have $a+b = \gcd(a,b) +lcm(a,b)$ therefore $a = \gcd(a,b), b = lcm(a,b)$ or vice versa. Therefore the game also stops.
 
 
 \section{Mon Lec, 6}
@@ -55,9 +55,21 @@ Note that this reasoning will apply to all $2^k$ initial settings, since the $n$
 
 
 \section{Mon Dis, 1c}
-Since each entry can be either positive or negative, there are at most $2^{4} = 16$ boards. Furthermore, we split these into 8 boards with an odd number of flips and 8 with even numbers.
-\newline
-Let
+We have shown in class that there can be at most 7 moves for each square. Therefore we construct the following square.
+\begin{bmatrix}
+-2 & 1\\
+-3 & 4
+\end{bmatrix}
+$\to$
+\begin{bmatrix}
+2 & -1\\
+-3 & 4
+\end{bmatrix}
+$\to$
+\begin{bmatrix}
+2 & -1\\
+4 & -3
+\end{bmatrix}
 
 
 \section{Wed Lec}
